lint_out.txt

> lint
> node --check app.js && node --check calibration-wizard.js && node --check reliability.js && node --check tools/browser-smoke.mjs

C:\Users\riley\Downloads\ProsodyBall-main\app.js:11024
      const barFrag = document.createDocumentFragment();
            ^

SyntaxError: Identifier 'barFrag' has already been declared
    at checkSyntax (node:internal/main/check_syntax:72:5)

Node.js v24.11.1
